--- a/resultSummary/index.html
+++ b/resultSummary/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Result Card</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="card-container">
@@ -22,25 +22,26 @@
             <ul>
                 <li>
                     <img src="lightning.png" alt="Lightning bolt icon representing reaction score">
-                    <span>Reaction</span>
+                    <span class="reaction">Reaction</span>
                     <p>80 / 100</p>
                 </li>
                 <li>
                     <img src="brain.png" alt="Brain icon representing memory score">
-                    <span>Memory</span>
+                    <span class="memory">Memory</span>
                     <p>92 / 100</p>
                 </li>
                 <li>
                     <img src="messenger.png" alt="Speech bubble icon representing verbal score">
-                    <span>Verbal</span>
+                    <span class="verbal">Verbal</span>
                     <p>61 / 100</p>
                 </li>
                 <li>
                     <img src="view.png" alt="Eye icon representing visual score">
-                    <span>Visual</span>
+                    <span class="visual">Visual</span>
                     <p>73 / 100</p>
                 </li>
             </ul>
+            <button class="continue-btn">Continue</button>
         </div>
     </div>
 </body>
